2005-12-17  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* dns.el (query-dns): Make sure we check the buffer size before
	removing tcp headers.

2005-12-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-delete-text-of-type): Enable it to
	remove MIME buttons associated with multipart/alternative parts.
	(gnus-mime-display-alternative): Tag buttons using `article-type'
	text property.

	* gnus-msg.el (gnus-copy-article-buffer): Remove MIME buttons
	associated with multipart/alternative parts.

	* gnus-art.el (gnus-signature-separator): Fix custom type.

	* mm-decode.el (mm-inlined-types): Fix custom type.
	(mm-keep-viewer-alive-types): Ditto.
	(mm-automatic-display): Ditto.
	(mm-attachment-override-types): Ditto.
	(mm-inline-override-types): Ditto.
	(mm-automatic-external-display): Ditto.

2005-12-15  Reiner Steib  <Reiner.Steib@gmx.de>

	* spam-report.el (spam-report-user-mail-address)
	(spam-report-user-agent): New variables.
	(spam-report-url-ping-plain): Use spam-report-user-agent.

2005-12-14  Ralf Angeli  <angeli@iwi.uni-sb.de>

	* gnus-art.el (gnus-button-handle-custom): Do not just use
	`customize-apropos' for any "M-x customize-*" button but the
	function called for.  Accept both the function name and its
	argument in order to achieve this.
	(gnus-button-alist): Remove support for "custom:" URL's.  Pass
	function name to `gnus-button-handle-custom' in case of "M-x
	customize-*" buttons.

2005-12-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-buttonized-mime-types): Mention addition of
	multipart/alternative and add xref to mm-discouraged-alternatives
	in doc string.

	* mm-decode.el (mm-discouraged-alternatives): Add xref to
	gnus-buttonized-mime-types in doc string.

2005-12-08  Reiner Steib  <Reiner.Steib@gmx.de>

	* mm-decode.el (mm-discouraged-alternatives): Fix custom type.
	Suggest image/.* in the doc string.

2005-12-12  Reiner Steib  <Reiner.Steib@gmx.de>

	* mm-uu.el (mm-uu-type-alist): Don't depend on message.el for